<resources>
    <string name="app_name">Mrello</string>
    <string name="intro_screen_heading">Let\'s get started</string>
    <string name="intro_screen_description">Collaborate and Plan Together Across Multiple Devices on Mrello\'s Minimalistic Interface.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="button_create_text">CREATE</string>
    <string name="button_update_text">UPDATE</string>
    <string name="content_description">image</string>
    <string name="signup_description_text">Enter you name, email-id, and password to register with us.</string>
    <string name="signup_field_name_text">Name</string>
    <string name="signup_field_email_text">Email</string>
    <string name="signup_field_password_text">Password</string>
    <string name="sign_in_content_text">Welcome Back! Login to continue</string>
    <string name="please_wait">Please Wait &#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="registered_success">Registration Success!</string>
    <string name="profile_update_success">Profile updated successfully!</string>
    <string name="profile_update_failure">Profile update failed!</string>
    <string name="info_no_changes">No changes made!</string>
    <string name="error_signing_up">Registration Failed!</string>
    <string name="error_profile_image_setup">Could not set profile image!</string>
    <string name="error_signing_in">Login Failed!</string>
    <string name="error_firestore_add_collection">Error while writing to firestore collection!</string>
    <string name="error_firestore_fetch_collection">Error while reading from firestore collection!</string>
    <string name="profile_pic_thumbnail">Profile Pic Thumbnail\n</string>
    <string name="my_profile">My Profile</string>
    <string name="close_drawer_button">Close drawer button</string>
    <string name="update_field_phone_text">Mobile</string>
    <string name="action_select_photo_gallery">Select Photo from Gallery</string>
    <string name="action_capture_photo_camera">Capture photo from Camera</string>
    <string name="floating_image_button">Add button</string>
    <string name="board_image">Board icon \nimage</string>
    <string name="et_board_name_hint">Board Name</string>
    <string name="create_board">Create Board</string>
    <string name="error_gallery_image_select_action">Couldn\'t get image from gallery!</string>
    <string name="error_camera_image_capture_action">Couldn\'t get image camera!</string>
    <string name="error_image_upload">Couldn\'t upload image to server!</string>
    <string name="error_empty_name">Name cannot be empty!</string>
    <string name="error_empty_password">Please enter a password!</string>
    <string name="error_empty_email">Please enter an email!</string>
    <string name="no_saved_boards">No boards available!</string>
    <string name="created_by">"Created by: "</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="created">Board Created</string>
    <string name="refreshing_boards">Refreshing Boards &#8230;</string>
    <string name="boards">Boards</string>
    <string name="list">List</string>
    <string name="et_edit_task_list_hint">Title</string>
    <string name="action_add">Action add</string>
    <string name="action_cancel">Action cancel</string>
    <string name="action_edit">Action edit</string>
    <string name="action_delete">Action delete</string>
    <string name="action_image">Action image</string>
    <string name="button_add_card_text">Add Card</string>
    <string name="button_add_list_text">Add List</string>
    <string name="card">Card</string>
    <string name="list_added">List added</string>
    <string name="list_deleted">List deleted</string>
    <string name="list_edited">List edited</string>
    <string name="card_added_updated">Card added or updated</string>
    <string name="error_empty_title">Title cannot be empty!</string>
    <string name="action_delete_list">Yes, delete list and all associated tasks.</string>
    <string name="action_skip_deletion">No</string>
    <string name="no_members_assigned">No members assigned to the board</string>
    <string name="members">Members</string>
    <string name="add_member">Add member</string>
    <string name="search_member">Search Member</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="error_no_such_member">No such member found</string>
    <string name="select_color">Select Color</string>
    <string name="label_color">Label Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="card_details">Card Details</string>
    <string name="delete_card">Delete Card</string>
    <string name="delete">Delete</string>
    <string name="task_delete_alert">All members associated with this task will be affected!</string>
    <string name="card_delete_alert">All members associated with this card will be affected!</string>
    <string name="deleted">Deleted</string>
    <string name="select_label_color">Select Label Color</string>
    <string name="due">"Due: "</string>
    <string name="task_list_card">Task list card</string>
    <string name="default_notification_channel_id">com.shail_singh.mrello.notification_channel</string>
    <string name="from">"FROM: "</string>
    <string name="message_data_payload">"Message data Payload: "</string>
    <string name="message_notification_body">"Message Notification Body: "</string>
    <string name="refreshed_token">"Refreshed token: "</string>
    <string name="error_member_notification">Unable to notify member</string>
    <string name="mrello_board_assigned">Mrello Board Assigned</string>
    <string name="you_are_assigned_to_a_new_board">"You are assigned to a new board: "</string>
</resources>